--- a/шаблон — личный кабинет — личный кабинет общая страница — педагоги.html
+++ b/шаблон — личный кабинет — личный кабинет общая страница — педагоги.html
@@ -37,27 +37,27 @@
             <ul class="menu-lk educator">
                 <li>
                     <a href="https://olgabindasova.github.io/nytonika/шаблон%20—%20личный%20кабинет%20—%20личный%20кабинет%20общая%20страница.html">
-                        <img class="" src="https://cdn.nyutonika.ru/icons-lk/lk-akk.svg"><span>Личный кабинет</span>
+                        <img title="Личный кабинет" class="" src="https://cdn.nyutonika.ru/icons-lk/lk-akk.svg"><span>Личный кабинет</span>
                     </a>
                 </li>
                 <li>
-                    <a href="https://olgabindasova.github.io/nytonika/шаблон%20—%20личный%20кабинет%20—%20ближайшие%20занятия.html">
-                        <img class="" src="https://cdn.nyutonika.ru/icons-lk/next-class-lk.svg"><span>Ближайшие занятия</span>
+                    <a  href="https://olgabindasova.github.io/nytonika/шаблон%20—%20личный%20кабинет%20—%20ближайшие%20занятия.html">
+                        <img title="Ближайшие занятия" class="" src="https://cdn.nyutonika.ru/icons-lk/next-class-lk.svg"><span>Ближайшие занятия</span>
                     </a>
                 </li>
                 <li>
                     <a href="https://olgabindasova.github.io/nytonika/шаблон%20—%20личный%20кабинет%20—%20последние%20занятия.html">
-                        <img class="" src="https://cdn.nyutonika.ru/icons-lk/recent-classes-lk.svg"><span>Последние занятия</span>
+                        <img title="Последние занятия" class="" src="https://cdn.nyutonika.ru/icons-lk/recent-classes-lk.svg"><span>Последние занятия</span>
                     </a>
                 </li>
                 <li>
                     <a href="https://olgabindasova.github.io/nytonika/шаблон%20—%20личный%20кабинет%20—%20история%20занятий.html">
-                        <img class="" src="https://cdn.nyutonika.ru/icons-lk/payment.svg"><span>История операций</span>
+                        <img title="История операций" class="" src="https://cdn.nyutonika.ru/icons-lk/payment.svg"><span>История операций</span>
                     </a>
                 </li>
                 <li>
                     <a href="https://olgabindasova.github.io/nytonika/шаблон%20—%20личный%20кабинет%20—%20история%20занятий.html">
-                        <img class="" src="https://cdn.nyutonika.ru/icons-lk/student.svg"><span>Мои ученики</span>
+                        <img title="Мои ученики" class="" src="https://cdn.nyutonika.ru/icons-lk/student.svg"><span>Мои ученики</span>
                     </a>
                 </li>
             </ul>
