--- a/шаблон — личный кабинет — личный кабинет общая страница.html
+++ b/шаблон — личный кабинет — личный кабинет общая страница.html
@@ -278,8 +278,24 @@
 
                         </ul>
                     </div>
-                </div>
+                    <div class="uk-margin-medium-top  student card-lk">
+                        <h3>Ученик: Тестовый ученик 3 (12 лет)</h3>
+                        <ul>
+                            <li>
+                                <div class="card-lk color-next-class-card educator-non">
+                                    <div class="card-lk_content">
+                                        <p><span>Преподаватель:</span>ещё не назначен</p>
+                                    </div>
+                                    <div class="card-lk_button">
+                                        <a href="" target="_blank" class="color-red">Удалить ученика</a>
+                                    </div>
+                                </div>
+                            </li>
 
+                        </ul>
+                    </div>
+                </div>
+                
                 <div class="uk-margin-large-top">
                     <h2>Добавить ученика</h2>
                     <form class="form-2 form-lk uk-scrollspy-inview uk-margin-top" action="" method="POST">
