--- a/шаблон — личный кабинет — личный кабинет общая страница.html
+++ b/шаблон — личный кабинет — личный кабинет общая страница.html
@@ -137,7 +137,7 @@
                 <div class="uk-margin-large-top">
                     <h2>Ближайшие занятия</h2>
                     <ul class="uk-grid-match uk-grid-small  uk-child-width-1-2@m uk-child-width-1-1@s"
-                        uk-sortable="handle: .card-lk" uk-grid>
+                         uk-grid>
                         <li>
                             <div class="card-lk color-next-class-card">
                                 <div class="card-lk_title">Занятие от 04.05.23 10:02</div>
@@ -175,7 +175,7 @@
                 <div class="uk-margin-large-top">
                     <h2>Последние занятия</h2>
                     <ul class="uk-grid-match uk-grid-small  uk-child-width-1-2@m uk-child-width-1-1@s"
-                        uk-sortable="handle: .card-lk" uk-grid>
+                         uk-grid>
                         <li>
                             <div class="card-lk color-recent-classes-card">
                                 <div class="card-lk_title">Занятие от 04.05.23 10:02
@@ -228,7 +228,7 @@
                     <div class="uk-margin-medium-top student card-lk">
                         <h3>Ученик: Тестовый ученик 1 (7 лет)</h3>
                         <ul class="uk-grid-match uk-grid-small  uk-child-width-1-2@m uk-child-width-1-1@s"
-                            uk-sortable="handle: .card-lk" uk-grid>
+                            uk-grid>
                             <li>
                                 <div class="card-lk color-next-class-card">
 
@@ -261,7 +261,7 @@
                     <div class="uk-margin-medium-top  student card-lk">
                         <h3>Ученик: Тестовый ученик 2 (10 лет)</h3>
                         <ul class="uk-grid-match uk-grid-small  uk-child-width-1-2@m uk-child-width-1-1@s"
-                            uk-sortable="handle: .card-lk" uk-grid>
+                            uk-grid>
                             <li>
                                 <div class="card-lk color-next-class-card">
 
@@ -282,7 +282,7 @@
                         <h3>Ученик: Тестовый ученик 3 (12 лет)</h3>
                         <ul>
                             <li>
-                                <div class="card-lk color-next-class-card educator-non">
+                                <div class="card-lk color-next-class-card ">
                                     <div class="card-lk_content">
                                         <p><span>Преподаватель:</span>ещё не назначен</p>
                                     </div>
