--- a/шаблон — личный кабинет — личный кабинет общая страница.html
+++ b/шаблон — личный кабинет — личный кабинет общая страница.html
@@ -282,12 +282,16 @@
                         <h3>Ученик: Тестовый ученик 3 (12 лет)</h3>
                         <ul>
                             <li>
-                                <div class="card-lk color-next-class-card ">
+                                <div class="card-lk color-next-class-card educator-non">
                                     <div class="card-lk_content">
                                         <p><span>Преподаватель:</span>ещё не назначен</p>
                                     </div>
                                     <div class="card-lk_button">
-                                        <a href="" target="_blank" class="color-red">Удалить ученика</a>
+                                        <form action="">
+                                            <button type="submit" class="color-red">
+                                                Удалить ученика
+                                            </button>
+                                        </form>
                                     </div>
                                 </div>
                             </li>
