--- a/шаблон — личный кабинет — личный кабинет общая страница — педагоги.html
+++ b/шаблон — личный кабинет — личный кабинет общая страница — педагоги.html
@@ -127,7 +127,7 @@
 
                 <div class="uk-margin-large-top">
                     <h2>Ближайшие занятия</h2>
-                    <ul class="uk-grid-match uk-grid-small  uk-child-width-1-2@m uk-child-width-1-1@s" uk-sortable="handle: .card-lk" uk-grid>
+                    <ul class="uk-grid-match uk-grid-small  uk-child-width-1-2@m uk-child-width-1-1@s"  uk-grid>
                         <li>
                             <div class="card-lk color-next-class-card educator">
                                 <div class="card-lk_title">Занятие от 04.05.23 10:02</div>
@@ -139,7 +139,7 @@
                                <div class="buttons-educator">
                                    <div class="card-lk_button">
                                       <button class="card-lk__button_class" type="submit">
-                                         <a href="" target="_blank">На занятие</a>
+                                         <a class="inactively" href="" target="_blank">На занятие</a>
                                       </button>
                                    </div>
                                    <button class="card-lk__button_repeal card-lk_button" type="button">Отменить</button>
@@ -170,7 +170,7 @@
 
                 <div class="uk-margin-large-top">
                     <h2>Последние занятия</h2>
-                    <ul class="uk-grid-match uk-grid-small  uk-child-width-1-2@m uk-child-width-1-1@s" uk-sortable="handle: .card-lk" uk-grid>
+                    <ul class="uk-grid-match uk-grid-small  uk-child-width-1-2@m uk-child-width-1-1@s"  uk-grid>
                         <li>
                             <div class="card-lk color-next-class-card educator">
                                 <div class="card-lk_title">Занятие от 04.05.23 10:02 <span class="payment-error">Ошибка оплаты</span></div>
@@ -206,7 +206,7 @@
 
                     <div class="uk-margin-medium-top card-lk">
                         <ul class="educator uk-grid-match uk-grid-small uk-margin-bottom uk-child-width-1-3@xl uk-child-width-1-3@l uk-child-width-1-1@m uk-child-width-1-1@s"
-                        uk-sortable="handle: .card-lk" uk-grid>
+                         uk-grid>
                         <li>
                             <div class="card-lk">
                                 <div class="educator_content">
