Карточка ближайших занятий:
 исправление кнопки, исправление лейбла

--- a/шаблон — личный кабинет — ближайшие занятия — педагог.html
+++ b/шаблон — личный кабинет — ближайшие занятия — педагог.html
@@ -115,9 +115,8 @@
                 </div>
                 <div class="buttons-educator">
                     <div class="card-lk_button">
-                       <button class="card-lk__button_class" type="submit">
-                          <a href="" target="_blank">На занятие</a>
-                       </button>
+                        <button class="card-lk__button_class" type="submit">На занятие
+                        </button>
                     </div>
                     <button class="card-lk__button_repeal card-lk_button" type="button">Отменить</button>
                 </div>
@@ -133,9 +132,8 @@
                </div>
                <div class="buttons-educator">
                 <div class="card-lk_button">
-                   <button class="card-lk__button_class" type="submit">
-                      <a href="" target="_blank">На занятие</a>
-                   </button>
+                    <button class="card-lk__button_class" type="submit">На занятие
+                    </button>
                 </div>
                 <button class="card-lk__button_repeal card-lk_button" type="button">Отменить</button>
             </div>
@@ -151,9 +149,8 @@
                </div>
                <div class="buttons-educator">
                 <div class="card-lk_button">
-                   <button class="card-lk__button_class" type="submit">
-                      <a href="" target="_blank">На занятие</a>
-                   </button>
+                    <button class="card-lk__button_class" type="submit">На занятие
+                    </button>
                 </div>
                 <button class="card-lk__button_repeal card-lk_button" type="button">Отменить</button>
             </div>
@@ -169,9 +166,8 @@
                </div>
                <div class="buttons-educator">
                 <div class="card-lk_button">
-                   <button class="card-lk__button_class" type="submit">
-                      <a href="" target="_blank">На занятие</a>
-                   </button>
+                    <button class="card-lk__button_class" type="submit">На занятие
+                    </button>
                 </div>
                 <button class="card-lk__button_repeal card-lk_button" type="button">Отменить</button>
             </div>
@@ -187,9 +183,8 @@
                </div>
                <div class="buttons-educator">
                 <div class="card-lk_button">
-                   <button class="card-lk__button_class" type="submit">
-                      <a href="" target="_blank">На занятие</a>
-                   </button>
+                    <button class="card-lk__button_class" type="submit">На занятие
+                    </button>
                 </div>
                 <button class="card-lk__button_repeal card-lk_button" type="button">Отменить</button>
             </div>
@@ -205,9 +200,8 @@
                </div>
                <div class="buttons-educator">
                 <div class="card-lk_button">
-                   <button class="card-lk__button_class" type="submit">
-                      <a href="" target="_blank">На занятие</a>
-                   </button>
+                    <button class="card-lk__button_class" type="submit">На занятие
+                    </button>
                 </div>
                 <button class="card-lk__button_repeal card-lk_button" type="button">Отменить</button>
             </div>
