--- a/шаблон — личный кабинет — личный кабинет общая страница — педагоги.html
+++ b/шаблон — личный кабинет — личный кабинет общая страница — педагоги.html
@@ -130,7 +130,7 @@
                     <ul class="uk-grid-match uk-grid-small  uk-child-width-1-2@m uk-child-width-1-1@s"  uk-grid>
                         <li>
                             <div class="card-lk color-next-class-card educator">
-                                <div class="card-lk_title">Занятие от 04.05.23 10:02</div>
+                                <div class="card-lk_title">Занятие от 04.05.23 10:02<a>Нет предоплаченных занятий</a></div>
                                 <div class="card-lk_content">
                                    <p><span>Ученик:</span>Тестовый ученик 1</p>
                                    <p><span>Преподаватель:</span>Тестовый логопед</p>
@@ -138,8 +138,7 @@
                                </div>
                                <div class="buttons-educator">
                                    <div class="card-lk_button">
-                                      <button class="card-lk__button_class" type="submit">
-                                         <a class="inactively" href="" target="_blank">На занятие</a>
+                                      <button class="card-lk__button_class" type="submit" disabled>На занятие
                                       </button>
                                    </div>
                                    <button class="card-lk__button_repeal card-lk_button" type="button">Отменить</button>
@@ -156,9 +155,8 @@
                               </div>
                               <div class="buttons-educator">
                                <div class="card-lk_button">
-                                  <button class="card-lk__button_class" type="submit">
-                                     <a href="" target="_blank">На занятие</a>
-                                  </button>
+                                <button class="card-lk__button_class" type="submit">На занятие
+                                </button>
                                </div>
                                <button class="card-lk__button_repeal card-lk_button" type="button">Отменить</button>
                            </div>
