Правки карточек ближайших занятий кабинет родителя

--- a/шаблон — личный кабинет — личный кабинет общая страница.html
+++ b/шаблон — личный кабинет — личный кабинет общая страница.html
@@ -140,7 +140,7 @@
                          uk-grid>
                         <li>
                             <div class="card-lk color-next-class-card">
-                                <div class="card-lk_title">Занятие от 04.05.23 10:02</div>
+                                <div class="card-lk_title">Занятие от 04.05.23 10:02<a>Нет предоплаченных занятий</a></div>
                                 <div class="card-lk_content">
                                     <p><span>Ученик:</span>Тестовый ученик 1</p>
                                     <p><span>Преподаватель:</span>Тестовый логопед</p>
@@ -148,7 +148,7 @@
                                 </div>
                                 <div class="card-lk_button">
                                     <button type="submit">
-                                        <a href="" target="_blank">На занятие</a>
+                                        На занятие
                                     </button>
                                 </div>
                             </div>
@@ -163,7 +163,7 @@
                                 </div>
                                 <div class="card-lk_button">
                                     <button type="submit">
-                                        <a href="" target="_blank">На занятие</a>
+                                        На занятие
                                     </button>
                                 </div>
                             </div>
