Исправленная страница ближайших занятий Родитель

--- a/шаблон — личный кабинет — ближайшие занятия.html
+++ b/шаблон — личный кабинет — ближайшие занятия.html
@@ -109,7 +109,7 @@
        <div class="page-lk">
        <h1 class="uk-text-left uk-margin-top">Ближайшие занятия</h1>
        <div class="uk-margin-large-top">
-        <ul class="uk-grid-match uk-grid-small  uk-child-width-1-2@m uk-child-width-1-1@s" uk-sortable="handle: .card-lk" uk-grid>
+        <ul class="uk-grid-match uk-grid-small  uk-child-width-1-2@m uk-child-width-1-1@s"  uk-grid>
          <li>
              <div class="card-lk color-next-class-card">
                  <div class="card-lk_title">Занятие от 04.05.23 10:02</div>
@@ -120,8 +120,8 @@
                 </div>
                 <div class="card-lk_button">
                     <button type="submit">
-                        <a href="" target="_blank">На занятие</a>
-                        </button>
+                        На занятие
+                    </button>
                 </div>
              </div>
          </li>
@@ -135,8 +135,8 @@
                </div>
                <div class="card-lk_button">
                 <button type="submit">
-                    <a href="" target="_blank">На занятие</a>
-                    </button>
+                    На занятие
+                </button>
                </div>
             </div>
          </li>
@@ -150,8 +150,8 @@
                </div>
                <div class="card-lk_button">
                 <button type="submit">
-                    <a href="" target="_blank">На занятие</a>
-                    </button>
+                    На занятие
+                </button>
                </div>
             </div>
          </li>
@@ -165,8 +165,8 @@
                </div>
                <div class="card-lk_button">
                 <button type="submit">
-                    <a href="" target="_blank">На занятие</a>
-                    </button>
+                    На занятие
+                </button>
                </div>
             </div>
          </li>
@@ -180,14 +180,14 @@
                </div>
                <div class="card-lk_button">
                 <button type="submit">
-                    <a href="" target="_blank">На занятие</a>
-                    </button>
+                    На занятие
+                </button>
                </div>
             </div>
          </li>
          <li>
             <div class="card-lk color-next-class-card">
-                <div class="card-lk_title"><span>Нет предоплаченных занятий (необходимо приобрести пакет)</span>Занятие от 04.05.23 10:02</div>
+                <div class="card-lk_title">Занятие от 04.05.23 10:02 <a>Нет предоплаченных занятий</a></div>
                 <div class="card-lk_content">
                    <p><span>Ученик:</span>Тестовый ученик 1</p>
                    <p><span>Преподаватель:</span>Тестовый логопед</p>
@@ -195,8 +195,8 @@
                </div>
                <div class="card-lk_button">
                 <button type="submit">
-                    <a href="" target="_blank">На занятие</a>
-                    </button>
+                    На занятие
+                </button>
                </div>
             </div>
          </li>
