Кнопка Диагностика успешна
Нужно кнопке Диагностика успешна  добавить класс  .educator_content_diagnost  
Еще небольшие изменения в файле стилей по размеру шрифта в карточке Мои ученики.

--- a/шаблон — личный кабинет — мои ученики — педагоги.html
+++ b/шаблон — личный кабинет — мои ученики — педагоги.html
@@ -125,7 +125,7 @@
             </div>
             <div class="page-lk">
                 <h1 class="uk-text-left uk-margin-top">Мои ученики</h1>
-                
+
                 <div class="uk-margin-medium-top">
                     <ul class="educator uk-grid-match uk-grid-small uk-margin-large-bottom uk-child-width-1-3@xl uk-child-width-1-3@l uk-child-width-1-2@m uk-child-width-1-1@s"
                         uk-sortable="handle: .card-lk" uk-grid>
@@ -143,21 +143,8 @@
                                     <p class="">За занятие:</p>
                                     <p class=""><span>300</span>руб.</p>
                                 </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="card-lk">
-                                <div class="educator_content">
-                                    <p class="">Ученик</p>
-                                    <p class=""><span>Тестовый ученик</span></p>
-                                </div>
-                                <div class="educator_content">
-                                    <p class="">Возраст</p>
-                                    <p class=""><span>7 лет</span></p>
-                                </div>
-                                <div class="educator_content border-none">
-                                    <p class="">За занятие:</p>
-                                    <p class=""><span>300</span>руб.</p>
+                                <div>
+                                    <button type="button" class="educator_content_diagnost">Диагностика успешна</button>
                                 </div>
                             </div>
                         </li>
@@ -225,7 +212,23 @@
                                 </div>
                             </div>
                         </li>
-                        
+                        <li>
+                            <div class="card-lk">
+                                <div class="educator_content">
+                                    <p class="">Ученик</p>
+                                    <p class=""><span>Тестовый ученик</span></p>
+                                </div>
+                                <div class="educator_content">
+                                    <p class="">Возраст</p>
+                                    <p class=""><span>7 лет</span></p>
+                                </div>
+                                <div class="educator_content border-none">
+                                    <p class="">За занятие:</p>
+                                    <p class=""><span>300</span>руб.</p>
+                                </div>
+                            </div>
+                        </li>
+
                     </ul>
                     <ul class="uk-pagination uk-flex-center uk-margin-medium">
                         <li><a href="#"><span uk-pagination-previous></span></a></li>
