Дополнения по пакетам занятий
Стили для новых пакетов
Изменение количества карточек в строке
Изменение размера шрифта на карточках

--- a/шаблон — личный кабинет — пакеты занятий.html
+++ b/шаблон — личный кабинет — пакеты занятий.html
@@ -130,7 +130,7 @@
                     <p>Учитель: Тестовый логопед</p>
                 </div>
                 <div class="uk-margin-large-top">
-                    <ul class="uk-grid-match uk-grid-small uk-margin-large-bottom uk-child-width-1-3@xl uk-child-width-1-2@l uk-child-width-1-2@m uk-child-width-1-1@s"
+                    <ul class="uk-grid-match uk-grid-small uk-margin-large-bottom uk-child-width-1-4@xl uk-child-width-1-2@l uk-child-width-1-2@m uk-child-width-1-1@s"
                         uk-sortable="handle: .card-lk" uk-grid>
                         <li>
                             <div class="card-lk activity-packages packag1">
@@ -176,6 +176,36 @@
                         <li>
                             <div class="card-lk activity-packages packag5">
                                 <div class="activity-packages_title">Пакет из 36 занятий</div>
+                                <div class="activity-packages_content">
+                                    <p class="activity-packages_content_pricetext">Цена:</p>
+                                    <p class="activity-packages_content_price"><span>12000</span>руб.</p>
+                                </div>
+                                <button type="submit" class="card-lk_button_activity-packages">Купить</button>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="card-lk activity-packages packag6">
+                                <div class="activity-packages_title">Пакет из 48 занятий</div>
+                                <div class="activity-packages_content">
+                                    <p class="activity-packages_content_pricetext">Цена:</p>
+                                    <p class="activity-packages_content_price"><span>12000</span>руб.</p>
+                                </div>
+                                <button type="submit" class="card-lk_button_activity-packages">Купить</button>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="card-lk activity-packages packag7">
+                                <div class="activity-packages_title">Пакет из 64 занятий</div>
+                                <div class="activity-packages_content">
+                                    <p class="activity-packages_content_pricetext">Цена:</p>
+                                    <p class="activity-packages_content_price"><span>12000</span>руб.</p>
+                                </div>
+                                <button type="submit" class="card-lk_button_activity-packages">Купить</button>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="card-lk activity-packages packag8">
+                                <div class="activity-packages_title">Пакет из 96 занятий</div>
                                 <div class="activity-packages_content">
                                     <p class="activity-packages_content_pricetext">Цена:</p>
                                     <p class="activity-packages_content_price"><span>12000</span>руб.</p>
