--- a/шаблон — личный кабинет — пакеты занятий.html
+++ b/шаблон — личный кабинет — пакеты занятий.html
@@ -217,7 +217,12 @@
                     </ul>
 
                 </div>
-
+                <div>
+                    <p>
+                        Оплата является полным согласием с условиями <a target="_blank"
+                            href="https://stage.nyutonika.ru/cabinet/contract/1/oferta"> договора </a>
+                    </p>
+                </div>
             </div>
 
         </section>
