--- a/шаблон — направления-начальная школа - окружающий мир.html
+++ b/шаблон — направления-начальная школа - окружающий мир.html
@@ -350,7 +350,7 @@
         <div class="container">
 
             <!-- 1 секция  баннер и текст-->
-            <section class="uk-flex-between one-section uk-margin-bottom" uk-grid>
+            <section class="uk-flex-between one-section uk-margin-large-bottom" uk-grid>
 
 
                 <div class="uk-width-expand@m uk-padding-remove">
@@ -368,7 +368,7 @@
                             class="uk-padding uk-margin-top napravlenia_textblock_two napravlenia_textblock_banner-nach">
                             Вы когда-нибудь задумывались, как видят мир животные и насекомые?
                         </div>
-                        <div class="h1-banner-text uk-padding napravlenia_textblock ">
+                        <div class=" uk-padding napravlenia_textblock ">
                             У каждого животного свое особое восприятие цвета - в глазах кошки мир наполняется голубыми и
                             зелеными оттенками, собаки, кроме черного и белого различают желтый, синий, коричневый и их
                             оттенки.
@@ -383,7 +383,7 @@
 
 
         </div>
-        <div class="problems problems-nachscola">
+        <div class="problems problems-nachscola okr-mir2">
             <div class="container">
                 <section class="container-item">
                     <h4 class="uk-text-center title-trend-block uk-scrollspy-inview "
@@ -431,7 +431,7 @@
 
         </div>
 
-        <div class="problems problems-nachscola">
+        <div class="problems problems-nachscola okr-mir">
             <div class="container">
                 <section class="container-item">
                     <h4 class="uk-text-center title-trend-block uk-scrollspy-inview "
@@ -441,7 +441,8 @@
                         важно не только “знать”, <br> но и уметь искать, исследовать, творить!
 
                     </p>
-                    <div>
+                    <div class="uk-child-width-1-2@l uk-child-width-1-2@m  uk-flex-between@l uk-flex-middle uk-flex-center uk-flex-wrap uk-grid-medium  uk-grid-stack"
+                        uk-grid>
                         <div class="efficiency efficiency-nachscola">
                             <ul>
                                 <li>
@@ -460,6 +461,11 @@
                                     научим исследовать мир и систематизировать знания о нем
                                 </li>
                             </ul>
+                        </div>
+                        <div class="uk-flex-center uk-flex problems-img uk-first-column">
+                            <img class="uk-scrollspy-inview"
+                                uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame9.png" alt="">
                         </div>
                     </div>
                 </section>
