Строка-уведомление на странице слотов

--- a/шаблон — личный кабинет — слоты-педагог.html
+++ b/шаблон — личный кабинет — слоты-педагог.html
@@ -133,7 +133,9 @@
             </div>
             <div class="page-lk">
                 <h1 class="uk-text-left uk-margin-top">Слоты занятий</h1>
-
+                <p class="slot-info">
+                    Отметьте галочками свободное время для проведения пробных уроков по Вашему локальному времени
+                </p>
                 <div class="slot-section">
                     <section class="slots">
                         <div class="slots_data">
