--- a/шаблон — направления-начальная школа - окружающий мир.html
+++ b/шаблон — направления-начальная школа - окружающий мир.html
@@ -406,7 +406,7 @@
             <!-- 1 секция  баннер и текст-->
             <section class="uk-flex-between one-section uk-margin-top uk-margin-bottom" uk-grid>
 
-                <div class="uk-width-1-2@m uk-padding-remove  uk-flex uk-flex-middle">
+                <div class="uk-width-1-2@m   uk-flex uk-flex-middle">
 
 
                     <div class="banner-content" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
@@ -421,7 +421,7 @@
                     </div>
 
                 </div>
-                <div class="uk-width-expand@m uk-padding-remove uk-margin">
+                <div class="uk-width-expand@m  uk-margin">
                     <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame8.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
