Страница логопедия - психолог 2

--- a/шаблон — направления-логопедия - психолог.html
+++ b/шаблон — направления-логопедия - психолог.html
@@ -262,6 +262,22 @@
             </section>
         </div>
         <div class="container">
+            <section class="two-section-dop-icons uk-scrollspy-inview "
+                uk-scrollspy="cls: uk-animation-fade; delay: 600">
+                <div class="two-section-img1 icons-shadow icons-style" tabindex="0">
+                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/мольберт.png">
+                </div>
+
+                <div alt="" class="two-section-img3 icons-radius icons-style" src="">
+                </div>
+                <div alt="" class="two-section-img4 icons-radius icons-style" src=" ">
+                </div>
+
+                <div class="two-section-img6 icons-shadow  icons-style">
+                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/шапка.png">
+                </div>
+
+            </section>
             <div class="container-item">
                 <h3>Хотите узнать больше?</h3>
                 <h4>Оставьте заявку на бесплатное занятие</h4>
@@ -324,7 +340,7 @@
 
 
                 <div class="uk-width-expand@m">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 30.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                 </div>
