Страница логопедия - психолог 2

--- a/шаблон — направления-логопедия - психолог.html
+++ b/шаблон — направления-логопедия - психолог.html
@@ -403,7 +403,7 @@
 
                 </div>
                 <div class="uk-width-expand@m   uk-margin">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 31-1.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                 </div>
