Страница логопедия - психолог

--- a/шаблон — направления-логопедия - психолог.html
+++ b/шаблон — направления-логопедия - психолог.html
@@ -451,16 +451,16 @@
                         <div class="uk-flex-center uk-flex problems-img uk-first-column">
                             <img class="uk-scrollspy-inview"
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 32-1.png" alt="">
                         </div>
                     </div>
 
-                    <div class="uk-child-width-1-2@l uk-child-width-1-2@m  uk-flex-between@l uk-flex-middle uk-flex-center uk-flex-wrap uk-grid-medium  uk-grid-stack k-margin-large-top"
+                    <div class="uk-child-width-1-2@l uk-child-width-1-2@m  uk-flex-between@l uk-flex-middle uk-flex-center uk-flex-wrap uk-grid-medium  uk-grid-stack uk-margin-large-top"
                         uk-grid>
                         <div class="uk-flex-center uk-flex problems-img uk-first-column">
                             <img class="uk-scrollspy-inview"
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 33-1.png" alt="">
                         </div>
                         <div class="efficiency">
                             <ul>
