Правки начальная школа математика 1

--- a/шаблон — направления-начальная школа - математика.html
+++ b/шаблон — направления-начальная школа - математика.html
@@ -347,11 +347,11 @@
         <div class="container">
 
             <!-- 1 секция  баннер и текст-->
-            <section class="uk-flex-between one-section uk-margin-large-bottom" uk-grid>
+            <section class="uk-flex-between one-section uk-margin-large-bottom " uk-grid>
 
 
-                <div class="uk-width-expand@m">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 22.png" alt=""
+                <div class="uk-width-expand@m ">
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 22.png" alt="" class="uk-padding"
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                 </div>
@@ -404,7 +404,7 @@
 
                 </div>
                 <div class="uk-width-expand@m   uk-margin">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame23.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame23.png" alt="" class="uk-padding"
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                 </div>
@@ -419,7 +419,7 @@
 
 
                 <div class="uk-width-expand@m">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 24.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 24.png" alt="" class="uk-padding"
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                 </div>
@@ -474,7 +474,7 @@
 
                 </div>
                 <div class="uk-width-expand@m   uk-margin">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 25.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 25.png" alt="" class="uk-padding"
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                 </div>
@@ -489,7 +489,7 @@
 
 
                 <div class="uk-width-expand@m">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 26.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 26.png" alt="" class="uk-padding"
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                 </div>
@@ -518,9 +518,9 @@
         </div>
         <div class="container">
 
-            <section class="container-item seven-section-margin-mobile uk-margin-xlarge-bottom">
+            <section class="container-item seven-section-margin-mobile math-hach uk-margin-xlarge-bottom">
                 <div class="seven-section">
-                    <div class="seven-section-block  uk-scrollspy-inview " style="background-color: #33C7A2;"
+                    <div class="seven-section-block  uk-scrollspy-inview "
                         uk-scrollspy="cls: uk-animation-slide-left; delay: 400">
                         <div class="seven-section-block-content uk-scrollspy-inview "
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
@@ -558,7 +558,7 @@
                     </div>
 
                 </div>
-                <div class="seven-section-block-sertificat " uk-lightbox="">
+                <div class="seven-section-block-sertificat" uk-lightbox="">
                     <a data-caption=" " href="https://cdn.nyutonika.ru/images/pages-napr/Frame 20.png">
                         <img alt="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 20.png"
                             uk-scrollspy="cls: uk-animation-slide-right; delay: 500" class="uk-scrollspy-inview ">
