Правки математика нач школа 2

--- a/шаблон — направления-начальная школа - математика.html
+++ b/шаблон — направления-начальная школа - математика.html
@@ -527,7 +527,7 @@
                             <h3>
                                 Что получаем в итоге
                             </h3>
-                            <p class="napravlenia_textblock" style="color: #fff;">
+                            <p class="napravlenia_textblock">
                                 Чем глубже и обширнее знания математики, тем проще детям выделять самое важное из
                                 обширного
                                 списка дел.
@@ -673,7 +673,7 @@
                             </ul>
                         </div>
                         <div class="uk-flex-center uk-flex problems-img uk-first-column">
-                            <img class="uk-scrollspy-inview"
+                            <img class="uk-scrollspy-inview uk-padding"
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
                                 src="https://cdn.nyutonika.ru/images/pages-napr/Frame 27.png" alt="">
                         </div>
