Правки математика нач школа 3

--- a/шаблон — направления-начальная школа - математика.html
+++ b/шаблон — направления-начальная школа - математика.html
@@ -673,7 +673,7 @@
                             </ul>
                         </div>
                         <div class="uk-flex-center uk-flex problems-img uk-first-column">
-                            <img class="uk-scrollspy-inview uk-padding"
+                            <img class="uk-scrollspy-inview uk-padding uk-flex-center"
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
                                 src="https://cdn.nyutonika.ru/images/pages-napr/Frame 27.png" alt="">
                         </div>
