Страница английский язык средняя школа 2

--- a/шаблон — направления-средняя-школа-английский-язык.html
+++ b/шаблон — направления-средняя-школа-английский-язык.html
@@ -257,7 +257,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 35-2.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -337,7 +337,7 @@
                                 </li>
                             </ul>
                             <div>
-                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 36-1.png" alt=""
                                     uk-scrollspy="cls: uk-animation-fade; delay: 600">
                             </div>
 
@@ -366,7 +366,7 @@
 
 
                 <div class="uk-width-expand@m uk-margin">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 37.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                 </div>
@@ -417,7 +417,7 @@
 
                 </div>
                 <div class="uk-width-expand@m   uk-margin">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 38.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                 </div>
@@ -432,7 +432,7 @@
 
 
                 <div class="uk-width-expand@m uk-margin">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 39.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                 </div>
@@ -482,7 +482,7 @@
 
                 </div>
                 <div class="uk-width-expand@m   uk-margin">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 40.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                 </div>
